scale down profile picture when window is too small - fixes #85

--- a/browser.css
+++ b/browser.css
@@ -56,6 +56,14 @@ img.larrybird {
 	padding-left: 80px !important;
 }
 
+/* scale down the profile picture image in expanded mode and add a padding */
+div._1qcaWNh-._1sp7Rzwo._3tixQkQf > img._1MjUlO8b._3uSDkk5s {
+	box-sizing: border-box;
+	padding: 10px;
+	max-width: 100%;
+	max-height: 100%;
+}
+
 /* make nav bar more narrow */
 #react-root ._2XOZ62oy {
 	height: 2.6rem !important;
